[project]
name = "dre-repo"
version = "0.5.9"
description = ""
authors = [{ name = "DRE Team", email = "dept-DRE@dfinity.org" }]
readme = "README.md"
dependencies = [
    "requests>=2.32.3",
    "gitpython>=3.1.43",
    "numpy>=2.1.1",
    "pandas>=2.2.2",
    "paramiko>=3.4.1",
    "pyyaml>=6.0.2",
    "colorama>=0.4.6",
    "elasticsearch>=8.15.0",
    "mammoth>=1.8.0",
    "pytest-mock>=3.14.0",
    "pygithub>=2.4.0",
    "python-dotenv>=1.0.1",
    "pre-commit>=3.8.0",
    "pylint>=3.2.7",
    "tenacity>=9.0.0",
    "mkdocs-material>=9.5.34",
    "mkdocs>=1.6.1",
    "clickhouse-connect>=0.7.19",
    "humanfriendly>=10.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.2",
    "ipython>=8.27.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.7",
    "mkdocs-git-committers-plugin-2>=2.3.0",
    "pydiscourse>=1.7.0",
    "datamodel-code-generator>=0.26.0",
    "pydantic-yaml>=1.3.0",
    "google-api-python-client>=2.143.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
    "pydrive2>=1.20.0",
    "markdownify>=0.13.1",
    "pytest>=8.3.2",
    "pytest-asyncio>=0.24.0",
    "pytest-xdist>=3.6.1",
    "git-changelog>=2.5.2",
    "slack-sdk>=3.31.0",
    "slack-bolt>=1.20.1",
    "slackblocks>=1.0.10",
    "ic-py>=1.0.1",
    "quart>=0.19.6",
    "ruamel-yaml>=0.18.6",
    "httpretty>=1.1.4",
    "aiohttp>=3.10.5",
]

[tool.rye]
universal = true                 # The dependency resolver will attempt to generate a resolution that's valid on all platforms, operating systems, and architectures, rather than a resolution that's specific to the current platform.
virtual = true                   # This is a special mode in which the package itself is not installed, but only the dependencies are.
dev-dependencies = ["black>=24"]

[tool.black]
line-length = 120
# 'extend-exclude' excludes files or directories in addition to the defaults
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
# https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html#configuration-format
(
  ^/release-controller/release_index.py    # This file is generated from /bin/release-controller-update-data-model.sh
)
'''
