[project]
name = "dre-repo"
version = "0.7.7"
description = ""
authors = [{ name = "DRE Team", email = "dept-DRE@dfinity.org" }]
readme = "README.md"
# Note: You should add dependencies with `rye add <dependency>`
# Or to add dev-dependencies: `rye add --dev <dependency>`
# This will ensure that the dependency is added to the correct section and also updates the corresponding lock file(s).
dependencies = [
    "requests>=2.33.1",
    "types-requests>=2.33.0.20260408",
    "gitpython>=3.1.46",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "paramiko>=4.0.0",
    "pyyaml>=6.0.3",
    "colorama>=0.4.6",
    "elasticsearch>=9.3.0",
    "mammoth>=1.12.0",
    "pytest-mock>=3.15.1",
    "pygithub>=2.9.0",
    "python-dotenv>=1.2.2",
    "pre-commit>=4.5.1",
    "pylint>=4.0.5",
    "tenacity>=9.1.4",
    "mkdocs-material>=9.7.6",
    "mkdocs>=1.6.1",
    "clickhouse-connect>=0.15.1",
    "humanfriendly>=10.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "ipython>=9.12.0",
    "mkdocs-git-revision-date-localized-plugin>=1.5.1",
    "mkdocs-git-committers-plugin-2>=2.5.0",
    "pydiscourse>=1.7.0",
    "datamodel-code-generator>=0.56.0",
    "pydantic-yaml>=1.6.0",
    "google-api-python-client>=2.194.0",
    "google-auth-httplib2>=0.3.1",
    "google-auth-oauthlib>=1.3.1",
    "pydrive2>=1.21.3",
    "types-Markdown",
    "markdownify>=1.2.2",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-xdist>=3.8.0",
    "git-changelog>=2.9.3",
    "slack-sdk>=3.41.0",
    "slack-bolt>=1.28.0",
    "slackblocks>=1.2.3",
    "ic-py>=1.0.1",
    "quart>=0.20.0",
    "ruamel-yaml>=0.19.1",
    "httpretty>=1.1.4",
    "aiohttp>=3.13.5",
    "uv>=0.11.6",
    "mypy==1.20.1",
    "prometheus-client>=0.25.0",
    "filelock==3.25.2",
]

[tool.rye]
universal = true                 # The dependency resolver will attempt to generate a resolution that's valid on all platforms, operating systems, and architectures, rather than a resolution that's specific to the current platform.
virtual = true                   # This is a special mode in which the package itself is not installed, but only the dependencies are.
dev-dependencies = ["black>=24"]

[tool.black]
line-length = 120
# 'extend-exclude' excludes files or directories in addition to the defaults
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
# https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html#configuration-format
(
  ^/release-controller/release_index.py    # This file is generated from /bin/release-controller-update-data-model.sh
)
'''

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
addopts = "-s -vv -n auto --dist=loadgroup"
# the following option appears in a pytest version that is later than the one currently used in Bazel.
# asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::_pytest.warning_types.PytestAssertRewriteWarning"
]
asyncio_default_fixture_loop_scope = "session"

[tool.ruff.lint.extend-per-file-ignores]
"release-controller/tests/test_*.py" = ["F811"]
