[workspace]

members = [
  "node_status_canister/src/node_status_canister_backend",
  "trustworthy-metrics-canister/src/trustworthy-metrics-canister-backend",
]

resolver = "2"

[workspace.dependencies]
candid = "0.10.6"
ic-cdk = "0.15"
ic-cdk-timers = "0.9" # Feel free to remove this dependency if you don't need timers
ic-cdk-macros = "0.15.0"
ic-stable-structures = "0.6.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prost = "0.13.1"
itertools = "0.13.0"
futures = "0.3"
anyhow = "1.0.86"
ciborium = "0.2.1"
ic-management-canister-types = { git = "https://github.com/dfinity/ic.git", rev = "5ba1412f9175d987661ae3c0d8dbd1ac3e092b7d" }
ic-protobuf = { git = "https://github.com/dfinity/ic.git", rev = "5ba1412f9175d987661ae3c0d8dbd1ac3e092b7d" }
ic-nns-constants = { git = "https://github.com/dfinity/ic.git", rev = "5ba1412f9175d987661ae3c0d8dbd1ac3e092b7d" }
ic-nns-common = { git = "https://github.com/dfinity/ic.git", rev = "5ba1412f9175d987661ae3c0d8dbd1ac3e092b7d" }
ic-registry-transport = { git = "https://github.com/dfinity/ic.git", rev = "5ba1412f9175d987661ae3c0d8dbd1ac3e092b7d" }
dfn_core = { git = "https://github.com/dfinity/ic.git", rev = "5ba1412f9175d987661ae3c0d8dbd1ac3e092b7d" }
